# llm_eval

./: .gitignore  Dockerfile  README.md  devcontainer.json  docker-compose.yml  package.json  pyproject.toml  start.sh  supervisord.conf
.devcontainer/: devcontainer.json
.streamlit/: config.toml
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  main.py  pyproject.toml
backend/.devcontainer/: Dockerfile  devcontainer.json
backend/api/routes/: validation.py
backend/api/v1/: main.py
backend/api/v1/endpoints/: experiments.py
backend/api/v1/routers/: experiments.py
backend/api/v1/services/: experiment_service.py
backend/api/v1/utils/: graph_analyzer.py  schema.json  token_counter.py
backend/api/validation/: __init__.py  json_validator.py  schemas.py  validator.py
backend/api/validation/json_schemas/: evaluation_metadata.json  graph_format.json
backend/persistence/: base.py  models.py  schemas.py
backend/tests/: conftest.py  test_experiment_service.py  test_validation_api.py
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/.devcontainer/: devcontainer.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ExperimentDetailsDialog.tsx  ExperimentForm.tsx  ExperimentResults.tsx  JsonGraph.tsx  theme-provider.tsx
frontend/src/context/: ExperimentContext.tsx  TabContext.tsx
frontend/src/hooks/: useExperimentDetails.ts  useExperiments.ts
frontend/src/schemas/: graph.ts
frontend/src/types/: api.ts
frontend/src/utils/: graphValidation.ts
llm_eval/: api.py  client.py  ui.py
llm_eval/db/: base.py  crud.py  schemas.py  session.py
llm_eval/scripts/: llm_eval.sh  manage.py
tests/: test_api.py  test_ui.py
validation_data/tech_startups/001/: metadata.json  (+2 more)
(+5 files in other folders)
