[tool.poetry]
name = "llm-eval"
version = "0.1.0"
description = ""
authors = ["Erskine Williams <github@archerwilliams.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aisuite = {extras = ["all"], version = "^0.1.6"}

httpx = "~0.27.0"
pandas = "^2.2.3"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
streamlit = "^1.40.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
