[tool.poetry]
name = "llm-eval-backend"
version = "0.1.0"
description = "Backend API for LLM Evaluation"
authors = ["Erskine Williams <github@archerwilliams.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aisuite = {extras = ["all"], version = "^0.1.6"}
tiktoken = "^0.6.0"
httpx = "~0.27.0"
pandas = "^2.2.3"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.27"
jsonschema = "^4.21.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
httpx = "~0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 